# bevy_commandify

./: .gitignore  Cargo.toml  README.md
examples/: sandbox.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
src/: gen.rs  lib.rs  parse.rs
tests/: chaining.rs  ecs_path.rs  entity_command.rs  no_trait.rs  output_pipe.rs  rename.rs  rename_struct.rs  rename_trait.rs  result_handlers.rs  simple.rs  systemify.rs  world.rs
tests/common/: mod.rs
tests/ui/: bad_path.rs  bad_path.stderr  entity_param.rs  entity_param.stderr  no_handler.rs  no_handler.stderr  no_pipe.rs  no_pipe.stderr  no_trait.rs  no_trait.stderr  no_world.rs  no_world.stderr  return_type.rs  return_type.stderr  return_type_entity.rs  return_type_entity.stderr  unknown_attribute.rs  unknown_attribute.stderr  world_param.rs  world_param.stderr
