[package]
name = "bevy_derive_commands"
description = "A macro for creating bevy Commands methods"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "bevy_derive_commands"
proc-macro = true

[features]
default = []

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11"